[package]
name = "simple-polygon-core"
version = "0.1.0"
authors = ["equation314 <equation618@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
