[package]
name = "simple-polygon-web"
version = "0.1.0"
authors = ["equation314 <equation618@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
simple-polygon-core = { path = "../core" }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
